# sonnetaw

./: .gitattributes  .gitignore  DEPLOYMENT.md  DEPLOY_MANUAL.md  FIXES.md  MULTILANG_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TAURI_BUILD.md  build-tauri.ps1  cmudict-0.7b  convert-dictionary.js  deploy-to-pages.ps1  deploy-to-pages.sh  index.html  package-lock.json  package.json  rhyme-helper.html  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
data/: cmu-dict-sample.json
src/: analyzer.ts  config.ts  dictionary.ts  main.ts  textProcessor.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
